hphp/hack/test/typecheck/reactive/mutable_on_static.php.exp
File "mutable_on_static.php", line 4, characters 11-19:
<<__Mutable>> attribute is not allowed on static methods. (NastCheck[3075])
