hphp/hack/test/typecheck/reactive/mutable_on_static.php
<?hh // partial

class A {
  <<__Rx, __Mutable>>
  public static function f(): int {
    return 1;
  }
}
